--- a/style.css
+++ b/style.css
@@ -58,19 +58,31 @@ body {
 
 
 .Firstpart h1{
-    
+    display:flex;
+    justify-content:flex-end;
     padding-left:24px;
+    position: relative;
+    bottom:399px;
+    margin-right:45px;
+
 }
 
 .Firstpart p{
-    
-    padding-left:24px;
+    display:flex;
+    justify-content: flex-end;
+    position: relative;
+    bottom:399px;
+    margin-right:82px;
 }
 
- .clickme{
+ .Firstpart .clickme{
+    display:flex;
+    align-content:flex-end;
+    margin-right:98px;
     
-    margin-left:24px;
 }
+
+
 
 /* Second part */
 .leftpart img{
