--- a/style.css
+++ b/style.css
@@ -260,3 +260,8 @@ justify-content:flex-end;
     display:flex;
     justify-content: flex-end;
 }
+
+.infonow{
+    display:flex;
+    justify-content: flex-end;
+}
