--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ nav:first-child h1{
     color:blue;
 }
 /* First part */
+
 .Firstpart{
     background-color:grey;
     height:678px;
@@ -93,16 +94,41 @@ nav:first-child h1{
     
 }
 
+.btnstart {
+    margin-top: -20rem;
+    width:90rem;
+}
+
+button {
+   
+    margin-left: 3rem;
+    position: relative;
+    left:990px;
+}
+
+
+button {
+    width: 15rem;
+    margin-left: 3rem;
+    position: relative;
+}
+
 
 
 /* Second part */
 .leftpart img{
-    width:74%;
+    width:85%;
     padding-top:32px;
     padding-bottom:42px;
     padding-left:24px;
    
 }
+
+.column2information {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
 
 .info{
  display:flex;
@@ -125,8 +151,9 @@ button {
 .container{
     display:flex;
     justify-content: flex-end;
-    margin-bottom:32px;
-    padding-top:84px;
+    margin-bottom:2px;
+    padding-top:67px;
+    padding-bottom:67px;
 }
 
 .details{
@@ -158,7 +185,7 @@ padding-left:62px;
 
 .container img {
     display:flex;
-    padding-bottom
+    
    
 }
 .container2 h1 {
