--- a/style.css
+++ b/style.css
@@ -32,9 +32,14 @@ body {
     bottom:58px;
     left:60px;
 }
+.headercolmar h1{
+    font-size: 1.5rem;
+}
 
-
-
+strong{
+    font-weight:bold;
+    color:black;
+}
 
 .headercolmar img{
     margin-left:26px;
@@ -94,16 +99,20 @@ nav:first-child h1{
     
 }
 
-.btnstart {
-    margin-top: -20rem;
-    width:90rem;
-}
+.btnstart{
+    margin-top: -20rem;}
 
 button {
    
     margin-left: 3rem;
     position: relative;
     left:990px;
+    border-radius:4px;
+    
+        
+        
+        
+
 }
 
 
@@ -132,7 +141,9 @@ button {
 
 .info{
  display:flex;
-  
+ justify-content: flex-end;
+ /* height: 20rem; */
+ margin-bottom: 3rem;
 }
 
 button {
@@ -152,13 +163,11 @@ button {
     display:flex;
     justify-content: flex-end;
     margin-bottom:2px;
-    padding-top:67px;
-    padding-bottom:67px;
+    
 }
 
 .details{
     position:relative;
-    top:110px;
     padding-left:1rem;
 }
 
@@ -226,17 +235,22 @@ padding-left:62px;
     padding-bottom:32px;
 }
 
+
+
 /* Third part */
 
 .learningcontainer{
    display:flex;
    flex-direction:row;
    padding-left:89px;
+  
+
  
 }
 
 .learningcontainer img{
     width:78%;
+    
 }
 
 .start{
@@ -261,7 +275,9 @@ padding-left:62px;
 }
 
 
-
+.color{
+    width:78%;
+}
 
 
 
@@ -382,6 +398,7 @@ justify-content:flex-end;
  .infox .noww{
      position:relative;
      top:64px;
+     Padding-left:1rem;
 
  }
 
@@ -392,7 +409,14 @@ justify-content:flex-end;
      padding-left:2rem;
 }
 
+.infox:hover{
+    background-color:grey;
+  
+}
 
+.containers{
+    margin-bottom:90px;
+}
 
 
 /* Footer*/
