--- a/style.css
+++ b/style.css
@@ -111,7 +111,9 @@ button {
     position: relative;
     left:990px;
     border-radius:4px;
+
   
+   cursor: pointer;
    
 
     
@@ -372,6 +374,14 @@ justify-content:flex-end;
 
 .infonow{
     display:flex;
+    
+}
+
+.infonow:hover{
+    background-color:grey;
+   
+    
+    
 }
 
 .secondinfo{
@@ -412,10 +422,6 @@ justify-content:flex-end;
      padding-left:2rem;
 }
 
-.infox:hover{
-    background-color:grey;
-  
-}
 
 .containers{
     margin-bottom:90px;
@@ -423,6 +429,36 @@ justify-content:flex-end;
 
 
 /* Footer*/
-footer h4{
-    padding-left:20px;
+
+
+footer{
+    background-color:grey;
+   
 }
+
+
+
+nav div{
+    display:flex;
+    align-items: center;
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+   
+}
+
+ul li{
+  margin-right:1rem;
+  display:inline-flex;
+  cursor: pointer;
+
+  
+ 
+  
+}
+
+
+
+
