--- a/style.css
+++ b/style.css
@@ -52,6 +52,18 @@ strong{
 nav:first-child h1{
     color:blue;
 }
+
+.mobile{
+    display:none;
+}
+@media only screen and (max-width:600px){
+        .mobile{
+            display:inline-flex;
+            justify-content: space-around;
+
+        } 
+}
+
 /* First part */
 
 .Firstpart{
