--- a/style.css
+++ b/style.css
@@ -415,6 +415,10 @@ justify-content:flex-end;
     
 }
 
+
+.infox:hover{
+    background-color:grey;
+}
 .secondinfo{
      display: flex;
 }
@@ -431,34 +435,28 @@ justify-content:flex-end;
 
 .infox h3{
     position: relative;
-    top:99px;
     padding-left:1rem;
+   
+    
 }
 
 .infox p{
-    position:relative;
-    top:90px;
-    padding-left:1rem;
+   padding-left:1rem;
+    
+    
+    
 }
 
  .infox .noww{
-     position:relative;
-     top:64px;
-     Padding-left:1rem;
+  Padding-left:1rem;
 
  }
 
  .infox .now{
-     position:relative;
-     right:17px;
-     bottom:17px;
-     padding-left:2rem;
+     padding-right:2rem;
 }
 
 
-.containers{
-
-}
 
 
 /* Footer*/
