--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 }
 
 .logo{
-    flex-grow:1;
+   flex:1;
+   
 }
 
 
@@ -26,8 +27,10 @@ body {
 
 .headercolmar{
     display:flex;
-    flex-direction:row;
+   justify-content: flex-end;
+   flex:1;
 }
+
 .headercolmar nav a {
     text-decoration:none;
     position: relative;
@@ -38,10 +41,6 @@ body {
     left:999px;
    
 }
-
-
-
-
 .headercolmar h1{
     position:relative;
     bottom:58px;
@@ -92,6 +91,12 @@ display:none;
  
 }
 
+
+.firsttxt p{
+   display:flex;
+   justify-content: center;
+}
+
 .Firstpart img{
     width:56%;
     padding-left:24px;
@@ -104,7 +109,9 @@ display:none;
       margin-right:160px;
       
 }
-
+.navbars{
+    margin-bottom:34px;
+}
 .Firstpart h1{
     display:flex;
     justify-content:flex-end;
@@ -314,7 +321,9 @@ padding-left:62px;
     width:78%;
 }
 
-
+.start3 img{
+     
+}
 
 
 
