--- a/style.css
+++ b/style.css
@@ -263,10 +263,6 @@ padding-left:62px;
    
 }
 
-.color{
-
-}
-
 .color p{
     padding-left:16px;
     padding-bottom:24px;
@@ -277,6 +273,22 @@ padding-left:62px;
     padding-bottom:32px;
 }
 
+.start6 .color{
+  
+}
+
+.start7 .color{
+   
+}
+
+.start5 .color{
+   
+}
+
+
+.start2 .color{
+    padding-top:
+}
 
 
 /* Third part */
