--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ ul.mobilenav{
         display:flex;
         flex-direction:column;
         width:100%;
+       
     } 
 
    
@@ -188,7 +189,6 @@ ul.mobilenav{
     justify-content:flex-end;
     padding-left:24px;
     position: relative;
-   
     margin-right:45px;
 
     
@@ -198,6 +198,7 @@ ul.mobilenav{
     .Firstpart h1 {
         display:flex;
         flex-direction:column;
+        padding-left:1rem;
      
     } 
 
@@ -217,6 +218,7 @@ ul.mobilenav{
     .Firstpart p {
         display:flex;
         flex-direction: column;
+        padding-left:1rem;
     }
 
    
@@ -252,7 +254,7 @@ button {
 
     @media only screen and (max-width:600px){
         button {
-            display:none;
+            margin-bottom:45px;
         } 
     
        
